<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>urdf_tutorial</name>
  <version>0.2.0</version>
  <description>Package to illustrate the modelling and visualzation decision of excercise 3b</description>
  <maintainer email="d.malysh123@gmail.com">Dmytro Malysh</maintainer>
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>ur_description</depend>
  <depend>visualization_msgs</depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>urdf_tutorial_interfaces</build_depend>
  <build_depend>kinenikros2</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>urdf_tutorial_interfaces</exec_depend>
  <exec_depend>kinenikros2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>